replace site.baseurl to relative_url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
   <title>{% if page.title %}{{ page.title }} - {% endif %} {{ site.title }}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: relative_url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: relative_url | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: relative_url | prepend: site.url }}">
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i|Source+Serif+Pro:400,600,700&display=swap" rel="stylesheet">
 
