--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                       {% assign chapter_index = page.chapter | plus: 1 %}
                       <div class="chapter {% if chapter_index == forloop.index  %}active{% endif %}">
                         {% if chapter.link  %}
-                          <a href="{{ session.link }}{{ chapter.link }}">{{ chapter.name }}</a>
+                          <a href="{{relative_url}}{{ session.link }}{{ chapter.link }}">{{ chapter.name }}</a>
                         {% endif %}
                         {% if chapter.external %}<a href="https://grand-tour-explorer-2017-alpha.herokuapp.com/" target="_blank">{{ chapter.name }}</a>{% endif %}
                         {% if chapter.author  %}
