prepending /gt-book

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@
                     {% endfor %}
                   </div>
                 {% else %} <!-- Preface and Acknowledgements, Epilogue -->
-                  <a class="session-title" href="{{ session.link }}{{ session.chapters[0].link }}">{{ session.name }}</a>
+                  <a class="session-title" href="/gt-book{{ session.link }}{{ session.chapters[0].link }}">{{ session.name }}</a>
                 {% endif %}
               </div>
             {% endfor %}
