--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{% if page.title %}{{ page.title }} - {% endif %} {{ site.title }}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ 'css/main.css' }}">
+  <link rel="stylesheet" href="{{ 'css/main.css' | prepend: '/gt-book/' }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: relative_url | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: relative_url | prepend: site.url }}">
 
