--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                     {% endfor %}
                   </div>
                 {% else %} <!-- Preface and Acknowledgements, Epilogue -->
-                  <a class="session-title" href="{{ session.link }}{{ session.chapters[0].link }}">{{ session.name }}</a>
+                  <a class="session-title" href="/gt-book{{ session.link }}{{ session.chapters[0].link }}">{{ session.name }}</a>
                 {% endif %}
               </div>
             {% endfor %}
