--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -20,9 +20,9 @@ layout: default
   </header>
 
   <div id="stickyHeader" class="post-sticky-header">
-    <!--<a class="post-sticky-site" href="{{ relative_url }}/">{{ site.title }}</a>-->
+    <!--<a class="post-sticky-site" href="{{ site.baseurl }}/">{{ site.title }}</a>-->
     <div class="" style="display: flex; flex-direction: column">
-      <a class="post-sticky-site" href="{{ relative_url }}/">{{ site.title }}</a>
+      <a class="post-sticky-site" href="{{ site.baseurl }}/">{{ site.title }}</a>
       <span class="post-sticky-meta">{{ site.data.sessions[page.session].name }} </span>
     </div>
     <div class="">
