author hover color change

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
     <div class="" style="display: flex; justify-content: space-between">
       <div class="">
-        {% if page.author %}<p id="{{page.author}}" class="post-author" style="cursor: pointer" onclick="about(this)">by {{ page.author }}</p> {% endif %}
+        {% if page.author %}<p id="{{page.author}}" class="post-author" onclick="about(this)">by {{ page.author }}</p> {% endif %}
       </div>
       <div class="paragraph">
       <!--  <span class="link-meta">Paragraph 2</span>-->
