About and References

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -45,13 +45,14 @@ layout: default
       <i class="material-icons" aria-label="Download" data-balloon-pos="left">arrow_downward</i>
     </div>
 
-    <div class="">
+    
+    <!-- <div class="">
       {% if page.references %}
       <div class="post-references">
         <h3>References</h3>
         <p>{{ page.references }}</p>
       </div>{% endif %}
-    </div>
+    </div> -->
 
     <div class="">
       {% if page.about %}
