--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,7 +11,7 @@ layout: default
         {% if page.author %}<p id="{{page.author}}" class="post-author" onclick="about(this)">by {{ page.author }}</p> {% endif %}
       </div>
       <div class="paragraph">
-      <!--  <span class="link-meta">Paragraph 2</span>-->
+        <i class="material-icons link-cite" aria-label="Cite this article" data-balloon-pos="left">format_quote</i>
         <i class="material-icons" aria-label="Copy link to article" data-balloon-pos="left">link</i>
         <i class="material-icons" aria-label="Download article (PDF)" data-balloon-pos="left">arrow_downward</i>
       </div>
