--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
 
             <div class="search-box">
               <i class="material-icons">search</i>
-              <input type="text" id="search-input" placeholder="Search">
+              <input type="text" id="search-input" placeholder="Search...">
+              <ul class="results-container" id="results-container"></ul>
             </div>
 
 
@@ -71,6 +72,10 @@
     {% include links-script.html %}
     {% include scroll-top.html %}
 
+  <script src="/gt-book/js/search-script.js" type="text/javascript"></script>
+
+  <script src="https://unpkg.com/simple-jekyll-search@latest/dest/simple-jekyll-search.min.js"></script>
+
   <script>
     function toggleChapters(session_loop) {
       chapters = document.getElementById(session_loop);
@@ -80,6 +85,12 @@
         chapters.style.display = "none";
       }
     }
+
+    var sjs = SimpleJekyllSearch({
+      searchInput: document.getElementById('search-input'),
+      resultsContainer: document.getElementById('results-container'),
+      json: '/gt-book/search.json'
+    });
   </script>
     
   </body>
