--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,8 @@
 
             <div class="search-box">
               <i class="material-icons">search</i>
-              <input type="text" id="search-input" placeholder="Search">
+              <input type="text" id="search-input" placeholder="Search...">
+              <ul class="results-container" id="results-container"></ul>
             </div>
 
             <div class="session toc" style="display: flex; justify-content: space-between; padding: 10px 0px;">
@@ -60,6 +61,10 @@
       </div>
     </div>
 
+  <script src="/gt-book/js/search-script.js" type="text/javascript"></script>
+
+  <script src="https://unpkg.com/simple-jekyll-search@latest/dest/simple-jekyll-search.min.js"></script>
+
   {% include header-script.html %}
   <script>
     function toggleChapters(session_loop) {
@@ -70,6 +75,12 @@
         chapters.style.display = "none";
       }
     }
+  
+  var sjs = SimpleJekyllSearch({
+    searchInput: document.getElementById('search-input'),
+    resultsContainer: document.getElementById('results-container'),
+    json: '/gt-book/search.json'
+  });
   </script>
   </body>
 
