--- a/public/mapbox/mapbox.css
+++ b/public/mapbox/mapbox.css
@@ -97,7 +97,7 @@
   .states-box {
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
     position: absolute;
-    height: 100px;
+    height: 80px;
     width: 100%;
     bottom: 0;
     left: 0;
@@ -107,7 +107,7 @@
   }
 
   .states-box .states-box-inner {
-    height: 90px;
+    height: 70px;
     background-color: white;
     border: 2px solid #dddddd;
     border-radius: 4px;
@@ -120,12 +120,14 @@
   }
 
   .stateColor {
-    width: 20px;
-    height: 20px;
+    width: 11px;
+    height: 11px;
     display: inline-block;
     position: relative;
-    top: 5px;
+    top: 1px;
     left: 5px;
+    opacity: 0.9;
+    border-radius: 100%;
   }
 
   .stateName {
@@ -138,4 +140,5 @@
 
   .stateButton {
     display: inline-block;
+    padding-right: 5px;
   }
