--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -224,6 +224,10 @@ pre {
   opacity: 1;
 }
 
+.home-icons {
+// for getElementsByClassName
+}
+
 .hide {
     opacity: 0;
     transition: opacity 0.2s linear;
