Adding spacing around figures and tables

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -548,7 +548,7 @@ html {
 
 /* Center tables for demo */
 table {
-  margin: 0 auto;
+  margin: 0 $spacing-unit -40px;
 }
 
 /* Default Table Style */
