Fixes bug where icons appear next to abstract

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -53,7 +53,7 @@ layout: default
     {{ content }}
 
     <div class="paragraph-links">
-      <span class="post-meta paragraph-link">Par.1</span>
+      <span class="post-meta paragraph-link">Par. X</span>
       <i class="material-icons link-cite" aria-label="Cite this paragraph" data-balloon-pos="left">format_quote</i>
       <i class="material-icons" aria-label="Copy link to this paragraph" data-balloon-pos="left">link</i>
       <i class="material-icons" aria-label="Download" data-balloon-pos="left">arrow_downward</i>
