--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -7,7 +7,7 @@
         <span class="site-description" style="margin-left: 20px;">The Digital Grand Tour</span>
         <h2 class="cover-title">{{ site.title }} 
           <span>
-            <i onmouseover="onHover()" onmouseout="offHover()" class="material-icons link-cite hide home-icons" aria-label="Cite the book" data-balloon-pos="left">format_quote</i>
+            <i onclick="homeCite('cover')" onmouseover="onHover()" onmouseout="offHover()" class="material-icons link-cite hide home-icons" aria-label="Cite the book" data-balloon-pos="left">format_quote</i>
             <i onmouseover="onHover()" onmouseout="offHover()" class="material-icons hide home-icons" aria-label="Copy link to book" data-balloon-pos="left">link</i>
           </span> 
       </h2>
