Homepage copy link

--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -8,7 +8,7 @@
         <h2 class="cover-title">{{ site.title }} 
           <span>
             <i onclick="homeCite('cover')" onmouseover="onHover()" onmouseout="offHover()" class="material-icons link-cite hide home-icons" aria-label="Cite the book" data-balloon-pos="left">format_quote</i>
-            <i onmouseover="onHover()" onmouseout="offHover()" class="material-icons hide home-icons" aria-label="Copy link to book" data-balloon-pos="left">link</i>
+            <i onclick="homeLink('cover')" onmouseover="onHover()" onmouseout="offHover()" class="material-icons hide home-icons" aria-label="Copy link to book" data-balloon-pos="left">link</i>
           </span> 
       </h2>
         <span class="cover-author" style="margin-left: 80px;">Giovanna Ceserani</span>
