--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,7 +16,7 @@ layout: default
       </div>
       <div class="paragraph">
         <i class="material-icons link-cite" aria-label="Cite this article" data-balloon-pos="left">format_quote</i>
-        <i class="material-icons" aria-label="Copy link to article" data-balloon-pos="left">link</i>
+        <i class="material-icons link-copy" aria-label="Copy link to article" data-balloon-pos="left">link</i>
         <i class="material-icons" aria-label="Download article (PDF)" data-balloon-pos="left">arrow_downward</i>
       </div>
     </div>
@@ -55,7 +55,7 @@ layout: default
     <div class="paragraph-links">
       <span class="post-meta paragraph-link">Par. X</span>
       <i class="material-icons link-cite" aria-label="Cite this paragraph" data-balloon-pos="left">format_quote</i>
-      <i class="material-icons" aria-label="Copy link to this paragraph" data-balloon-pos="left">link</i>
+      <i class="material-icons link-copy" aria-label="Copy link to this paragraph" data-balloon-pos="left">link</i>
       <i class="material-icons" aria-label="Download" data-balloon-pos="left">arrow_downward</i>
     </div>
 
