--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -642,3 +642,15 @@ table td {
 .fig {
   cursor: pointer;
 }
+
+.half-fig {
+  cursor: pointer;
+  max-width: 48%;
+  display: inline-block;
+}
+
+.third-fig {
+  cursor: pointer;
+  max-width: 32%;
+  display: inline-block;
+}
