Figure caption formatting

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -67,7 +67,8 @@ figure > img {
 }
 
 figcaption {
-    font-size: $small-font-size;
+    font-size: $caption-font-size;
+    color: $caption-color;
 }
 
 
