--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -328,7 +328,7 @@
         )
 
       div.col-lg-3(ng-show="entry.travels && entry.travels.length")
-        button.btn.btn-default.btn-xs.btn-block(type="button", ng-click="reanimate(entry.travels)") Reanimate
+        button.btn.btn-default.btn-xs.btn-block(type="button", ng-click="reanimate(entry.travels)") Animate
         br
         #minimap
         div.entry-info
