--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -62,7 +62,10 @@
   .div(ng-show="entry")
     
     h1
-      span(ng-bind-html="highlighted('fullName', entry.fullName)")
+      .entry-not-original(ng-if="entry.origin && entry.origin.entryOrigin !== 'From the Dictionary'")
+        span(ng-bind-html="highlighted('fullName', entry.fullName)")
+      .entry-original(ng-if="entry.origin && entry.origin.entryOrigin === 'From the Dictionary'")
+        span(ng-bind-html="highlighted('fullName', entry.fullName)")
 
     .entry-origin(ng-if="entry.origin && entry.origin.entryOrigin !== 'From the Dictionary'")
       span [From the entry of 
