--- a/public/app.css
+++ b/public/app.css
@@ -1082,6 +1082,15 @@ ul.list-group.entry-facet > li .controls {
 
 }
 
+.entry-stub {
+  color: #444;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  margin: 10px;
+  padding: 12px;
+}
+
 .entry-origin {
   margin-top: -1em;
   margin-bottom: 1.75em;
