Changed non-original entry color to gold

--- a/public/app.css
+++ b/public/app.css
@@ -1075,7 +1075,7 @@ ul.list-group.entry-facet > li .controls {
 }
 
 .entry-not-original {
-  color: #888
+  color: #d0b67d
 }
 
 .entry-original {
