Changed stub css
Gray background with gray outline changed to white background with gold outline

--- a/public/app.css
+++ b/public/app.css
@@ -1084,8 +1084,8 @@ ul.list-group.entry-facet > li .controls {
 
 .entry-stub {
   color: #444;
-  background-color: #eee;
-  border: 1px solid #ddd;
+  background-color: #ffffff;
+  border: 1px solid #d0b67d;
   border-radius: 2px;
   margin: 10px;
   padding: 12px;
