--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -18,7 +18,7 @@
             span.input-group-btn
               a.btn.btn-default(
                 ng-href="{{ getEntryLink(editingIndex.newIndex) }}",
-                ng-click="handleEntryClick()"x,
+                ng-click="handleEntryClick()",
               ) Go
 
         strong(ng-show="editStatus.mustActivateLatest && editStatus") Activate the Latest revision to edit this entry.
@@ -36,7 +36,7 @@
             ng-class="{ disabled: editStatus.creating }",
             type="button",
             ng-click="editStatus.creating ? null : createEntry()",
-          ) {{ editStatus.creating? 'Creating...' : 'Create Entry' }}
+          ) {{ editStatus.creating ? 'Creating...' : 'Create Entry' }}
 
   .row
     br
