Fixed stub typo

--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -331,7 +331,7 @@
           ng-bind-html="entry[fieldKey + '_formatted']",
         )
 
-      div.col-lg-6(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative")
+      div.col-lg-6(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative'")
         div.entry-stub Why is this entry blank? This is one of the entries we created for travelers who only existed in others’ entries, with no narrative of their own, of whom a great majority are women. 
           a Read more about how we found these hidden figures and what we know about them…
           
