Revert "Changed highlighted/stub cases to just extracted from narrative"
This reverts commit 85e6f29a3a604a16c0f93ad5bdb8fc921a9743b6.

--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -62,9 +62,9 @@
   .div(ng-show="entry")
     
     h1
-      .entry-not-original(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative'")
+      .entry-not-original(ng-if="entry.origin && entry.origin.entryOrigin !== 'From the Dictionary'")
         span(ng-bind-html="highlighted('fullName', entry.fullName)")
-      .entry-original(ng-if="entry.origin && entry.origin.entryOrigin !== 'Extracted from narrative'")
+      .entry-original(ng-if="entry.origin && entry.origin.entryOrigin === 'From the Dictionary'")
         span(ng-bind-html="highlighted('fullName', entry.fullName)")
 
     .entry-origin(ng-if="entry.origin && entry.origin.entryOrigin !== 'From the Dictionary'")
@@ -325,13 +325,13 @@
 
       div.col-lg-6
         div.text-serif.check-html.body-text(
-          ng-if="entry.origin && entry.origin.entryOrigin !== 'Extracted from narrative'",
+          ng-if="entry.origin && entry.origin.entryOrigin === 'From the Dictionary'",
           ng-repeat="fieldKey in [ 'biography', 'tours', 'narrative', 'notes' ]",
           ng-class="{ narrative: fieldKey === 'narrative', small: fieldKey === 'notes' }",
           ng-bind-html="entry[fieldKey + '_formatted']",
         )
 
-      div.col-lg-6(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative'")
+      div.col-lg-6(ng-if="entry.origin && entry.origin.entryOrigin !== 'From the Dictionary'")
         div.entry-stub Why is this entry blank? This is one of the entries we created for travelers who only existed in others’ entries, with no narrative of their own, of whom a great majority are women. 
           a Read more about how we found these hidden figures and what we know about them…
           
