--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -69,7 +69,7 @@
         div.col-lg-3.entry-info
             .row
                 entry-field.col-lg-12.col-md-4.col-sm-6(
-                    ng-repeat="fieldKey in [ 'origin', 'alternateNames', 'type', 'dates', 'places', 'pursuits', 'parents', 'marriages', 'mistress', 'education', 'occupations', 'military', 'societies', 'exhibitions' ]",
+                    ng-repeat="fieldKey in [ 'origin', 'alternateNames', 'type', 'dates', 'places', 'pursuits', 'parents_parsed', 'marriages', 'mistress', 'education', 'occupations', 'military', 'societies', 'exhibitions' ]",
                     field-key="{{ fieldKey }}",
                     template="facet-wrapper",
                 )
