--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -143,12 +143,13 @@
                     ng-bind-html="highlighted('pursuits', e.pursuit)"
                   )
                     
-          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.parents && entry.parents.parents")
+          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.parents_parsed.length > 0")
             .panel.panel-default
               .panel-heading Parents
               ul.list-group
-                li.list-group-item {{entry.parents.parents}}
-          
+                li.list-group-item(ng-repeat="pr in entry.parents_parsed")
+                  span(ng-if="!pr['Parent ID'] && !pr['Parent ID'] !== 0") {{pr.parent}} 
+                  a(ng-if="pr['Parent ID']|| pr['Parent ID'] === 0", ng-href="{{ '#/entries/' + pr['Parent ID'] }}") {{pr.parent}}           
           
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.marriages.length")
             .panel.panel-default
