--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -13,6 +13,10 @@
           a.pull-right(ng-click="clear()" style="color: #80b8da") Clear all
 
         .form-group
+          label Index
+          index-search(data-title="", data-field="index")
+
+        .form-group
           label Traveler name
           input.input-sm.form-control(
             type="text", 
