adding id visibility and search by index (#291)
* adding id visibility and search by index

* shifting index position on pages

* file cleanup

--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -23,6 +23,10 @@
             typeahead-template-url="components/fullname-search-suggestion"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
+        
+        .form-group
+          label Index
+          index-search(data-title="", data-field="index")
 
         .form-group
           label Born
